# HyperBlocker

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FindNCCL.cmake  Findyaml-cpp.cmake
core/: CMakeLists.txt  hyper_blocker.cuh  hyperblocker.cuh  hyperblocker.h
core/common/: types.cuh  types.h  yaml_config.cuh  yaml_config.h
core/components/: data_mngr.h  execution_plan_generator.cuh  execution_plan_generator.h  host_producer.cu  host_producer.cuh  host_producer.h  host_reducer.h
core/components/scheduler/: CHBL_scheduler.h  even_split_scheduler.h  round_robin_scheduler.h  scheduler.h
core/data_structures/: execution_plan.cuh  match.h  rule.cuh  rule.h  table.cuh  table.h
core/gpu/: device_func.cuh  global_func.cuh  host_func.cuh
core/gpu/kernel_data_structures/: kernel_bitmap.cuh  kernel_table.cuh
core/util/: atomic.h  bitmap.h
data/DBLP-ACM/rules/: 0.yaml
data/DBLP-Google/: match.csv  tableA.csv
data/DBLP-Google/rules/: 0.yaml
data/dblp-acm/: match.csv
examples/: CMakeLists.txt  read_csv.cu  read_rules.cu  run_hyperblocker.cu  run_sys.cu  test_device.cu
tools/: analysis.py  compute_CDF.py  compute_ndcg.py  ditto_dataset_generator.py  patrtition.py  read_file.py  train.py  verify_result.py
tools/log/: songs_verify.txt
